--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-My Page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>D3 Autocontrol Playground Testing Zone</title>
+</head>
+<body>
+  This is an example of d3.autocontrol.js. [See the Github for more information](https://github.com/Graphicacy/d3.autocontrol)
+
+  <svg id="playground"></svg>
+
+  This is the code that ran above:
+  <code>
+    d3.select('svg#playground').selectAll('circle')
+      .data([1, 2, 3, 4])
+        .attr('fill', 'blue',
+          'color')
+        .attr('cx', 0, 
+          'slider', function (value, d, i) { 
+            return (i + 1) * value;
+          }, 1, 400)
+        .attr('cy', function (d, i) { return 20 * (i + 1); })
+        .attr('r', function (d, i) { return i + 5; },
+          'code', function (d, i) { return d; })
+  </code>
+
+  <!-- Begin D3 Autocontrol Playground dependencies -->
+  <script src="vendor/d3.js"></script>
+  <link rel="stylesheet" href="vendor/d3.slider.css">
+  <script src="vendor/d3.slider.js"></script>
+  <script src='vendor/jscolor/jscolor.js'></script>
+  <script src="d3.playground.js"></script>
+  <script src="d3.autocontrol.js"></script>
+  <!-- End D3 Autocontrol Playground dependencies -->
+
+  <!-- ... and finally, custom code for this page -->
+  <script src="test.js"></script>
+</body>
+</html>
