Fix bad script tag

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
   <!-- Begin D3 Autocontrol Playground dependencies -->
   <script src="vendor/d3.js"></script>
-  <link rel="stylesheet" href="vendor/d3.slider.css">
-  <script src="vendor/d3.slider.js"></script>
+  <link rel="stylesheet" href="vendor/d3_slider/d3.slider.css">
+  <script src="vendor/d3_slider/d3.slider.js"></script>
   <script src='vendor/jscolor/jscolor.js'></script>
   <script src="d3.playground.js"></script>
   <script src="d3.autocontrol.js"></script>
